# diesel-error-demo

./: .env  Cargo.toml  README.md
migrations/2022-08-13-182648_create_users/: up.sql
src/: generic.rs  main.rs  models.rs  schema.rs
