[package]
name = "diesel-error-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { git = "https://github.com/heyrutvik/diesel.git", branch = "diesel-error/another-command", features = ["postgres", "chrono"] }
#diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
#diesel = { path = "../diesel/diesel", features = ["postgres", "chrono"] }
dotenvy = "0.15.5"
chrono = { version = "0" }
